# anthropic-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml
scripts/: install-cron.sh
src/anthropic_tracker/: __init__.py  alerts.py  cli.py  config.py  dashboard.py  db.py  delta.py  fetcher.py  parser.py  summarizer.py  web.py
src/anthropic_tracker/static/: style.css
src/anthropic_tracker/templates/: base.html  dashboard.html
src/anthropic_tracker/templates/partials/: alerts.html  compensation.html  departments.html  locations.html  recent.html  search.html  summary.html  trends.html
tests/: conftest.py  fixtures.py  test_alerts.py  test_cli.py  test_db.py  test_delta.py  test_fetcher.py  test_parser.py
