[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anthropic-tracker"
version = "0.1.0"
description = "Track Anthropic hiring metrics from the Greenhouse public API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "click>=8.1,<9",
    "rich>=13,<14",
    "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.4",
    "coverage>=7",
    "respx>=0.21",
]

[project.scripts]
tracker = "anthropic_tracker.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["anthropic_tracker"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
