[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anthropic-tracker"
version = "0.1.0"
description = "Track Anthropic hiring metrics from the Greenhouse public API"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pete Stergion" }]
readme = "README.md"
dependencies = [
    "httpx>=0.27,<1",
    "click>=8.1,<9",
    "rich>=13,<14",
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "coverage>=7",
    "respx>=0.21",
]

[project.scripts]
tracker = "anthropic_tracker.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anthropic_tracker = ["templates/*.html", "templates/partials/*.html", "static/*.css"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["anthropic_tracker"]
omit = ["tests/*", "src/anthropic_tracker/dashboard.py"]

[tool.coverage.report]
show_missing = true
fail_under = 50
